--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-org274b48b" class="outline-2">
-<h2 id="org274b48b">what is spark</h2>
-<div class="outline-text-2" id="text-org274b48b">
+<div id="outline-container-org3375617" class="outline-2">
+<h2 id="org3375617">what is spark</h2>
+<div class="outline-text-2" id="text-org3375617">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org7a2be33" class="outline-2">
-<h2 id="org7a2be33">RDD</h2>
-<div class="outline-text-2" id="text-org7a2be33">
+<div id="outline-container-org32ec677" class="outline-2">
+<h2 id="org32ec677">RDD</h2>
+<div class="outline-text-2" id="text-org32ec677">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-org0f3c28b" class="outline-3">
-<h3 id="org0f3c28b">RDD基础</h3>
-<div class="outline-text-3" id="text-org0f3c28b">
+<div id="outline-container-org8452bbf" class="outline-3">
+<h3 id="org8452bbf">RDD基础</h3>
+<div class="outline-text-3" id="text-org8452bbf">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-orga0d7234" class="outline-2">
-<h2 id="orga0d7234">spark use</h2>
-<div class="outline-text-2" id="text-orga0d7234">
+<div id="outline-container-orgc48159e" class="outline-2">
+<h2 id="orgc48159e">spark use</h2>
+<div class="outline-text-2" id="text-orgc48159e">
 </div>
-<div id="outline-container-org1263a25" class="outline-3">
-<h3 id="org1263a25">spark base</h3>
-<div class="outline-text-3" id="text-org1263a25">
+<div id="outline-container-org1f1d758" class="outline-3">
+<h3 id="org1f1d758">spark base</h3>
+<div class="outline-text-3" id="text-org1f1d758">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-org754a756" class="outline-3">
-<h3 id="org754a756">spark install</h3>
-<div class="outline-text-3" id="text-org754a756">
+<div id="outline-container-org9cc9373" class="outline-3">
+<h3 id="org9cc9373">spark install</h3>
+<div class="outline-text-3" id="text-org9cc9373">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-org6a14274" class="outline-3">
-<h3 id="org6a14274">spark shell</h3>
-<div class="outline-text-3" id="text-org6a14274">
+<div id="outline-container-orgdf30ea8" class="outline-3">
+<h3 id="orgdf30ea8">spark shell</h3>
+<div class="outline-text-3" id="text-orgdf30ea8">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-orgeb76aad" class="outline-3">
-<h3 id="orgeb76aad">idea spark scala</h3>
-<div class="outline-text-3" id="text-orgeb76aad">
+<div id="outline-container-org39474e1" class="outline-3">
+<h3 id="org39474e1">idea spark scala</h3>
+<div class="outline-text-3" id="text-org39474e1">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-org3681639" class="outline-3">
-<h3 id="org3681639">idea spark java</h3>
-<div class="outline-text-3" id="text-org3681639">
+<div id="outline-container-org9463e1c" class="outline-3">
+<h3 id="org9463e1c">idea spark java</h3>
+<div class="outline-text-3" id="text-org9463e1c">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-org4da2f1c" class="outline-3">
-<h3 id="org4da2f1c">rdd &amp; dataframe</h3>
+<div id="outline-container-orge7a490a" class="outline-3">
+<h3 id="orge7a490a">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-org90f2f38" class="outline-2">
-<h2 id="org90f2f38">docker spark</h2>
-<div class="outline-text-2" id="text-org90f2f38">
+<div id="outline-container-orgada4f1d" class="outline-2">
+<h2 id="orgada4f1d">docker spark</h2>
+<div class="outline-text-2" id="text-orgada4f1d">
 </div>
-<div id="outline-container-orgaca2a92" class="outline-3">
-<h3 id="orgaca2a92">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-orgaca2a92">
+<div id="outline-container-org950cc72" class="outline-3">
+<h3 id="org950cc72">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-org950cc72">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-org52463b3" class="outline-3">
-<h3 id="org52463b3">docker search spark</h3>
-<div class="outline-text-3" id="text-org52463b3">
+<div id="outline-container-org034b61c" class="outline-3">
+<h3 id="org034b61c">docker search spark</h3>
+<div class="outline-text-3" id="text-org034b61c">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org08e6727" class="outline-2">
-<h2 id="org08e6727">docker hbase</h2>
+<div id="outline-container-org79f8793" class="outline-2">
+<h2 id="org79f8793">docker hbase</h2>
 </div>
 
 </div>
