--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-orge81cc8a" class="outline-2">
-<h2 id="orge81cc8a">git 独奏</h2>
-<div class="outline-text-2" id="text-orge81cc8a">
+<div id="outline-container-orgf509945" class="outline-2">
+<h2 id="orgf509945">git 独奏</h2>
+<div class="outline-text-2" id="text-orgf509945">
 </div>
-<div id="outline-container-org633c341" class="outline-3">
-<h3 id="org633c341">git 初始化</h3>
-<div class="outline-text-3" id="text-org633c341">
+<div id="outline-container-org8e1e539" class="outline-3">
+<h3 id="org8e1e539">git 初始化</h3>
+<div class="outline-text-3" id="text-org8e1e539">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc6e0995" class="outline-3">
-<h3 id="orgc6e0995">git 暂存区</h3>
-<div class="outline-text-3" id="text-orgc6e0995">
+<div id="outline-container-orga3963a9" class="outline-3">
+<h3 id="orga3963a9">git 暂存区</h3>
+<div class="outline-text-3" id="text-orga3963a9">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-org713fdb5" class="outline-3">
-<h3 id="org713fdb5">git reset 重置</h3>
-<div class="outline-text-3" id="text-org713fdb5">
+<div id="outline-container-orgdd5012b" class="outline-3">
+<h3 id="orgdd5012b">git reset 重置</h3>
+<div class="outline-text-3" id="text-orgdd5012b">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-org6a7e47d" class="outline-3">
-<h3 id="org6a7e47d">git 检出</h3>
-<div class="outline-text-3" id="text-org6a7e47d">
+<div id="outline-container-orga1042d4" class="outline-3">
+<h3 id="orga1042d4">git 检出</h3>
+<div class="outline-text-3" id="text-orga1042d4">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc9d4dc0" class="outline-3">
-<h3 id="orgc9d4dc0">git 恢复进度</h3>
-<div class="outline-text-3" id="text-orgc9d4dc0">
+<div id="outline-container-orgdb06716" class="outline-3">
+<h3 id="orgdb06716">git 恢复进度</h3>
+<div class="outline-text-3" id="text-orgdb06716">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-orgec6d0f7" class="outline-3">
-<h3 id="orgec6d0f7">git 基础操作</h3>
-<div class="outline-text-3" id="text-orgec6d0f7">
+<div id="outline-container-org8a21676" class="outline-3">
+<h3 id="org8a21676">git 基础操作</h3>
+<div class="outline-text-3" id="text-org8a21676">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org652ee9b" class="outline-3">
-<h3 id="org652ee9b">git tools</h3>
-<div class="outline-text-3" id="text-org652ee9b">
+<div id="outline-container-org2f908ca" class="outline-3">
+<h3 id="org2f908ca">git tools</h3>
+<div class="outline-text-3" id="text-org2f908ca">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-org1a43e57" class="outline-3">
-<h3 id="org1a43e57">改变历史</h3>
-<div class="outline-text-3" id="text-org1a43e57">
+<div id="outline-container-org96d0515" class="outline-3">
+<h3 id="org96d0515">改变历史</h3>
+<div class="outline-text-3" id="text-org96d0515">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-org2356d10" class="outline-3">
-<h3 id="org2356d10">git克隆</h3>
-<div class="outline-text-3" id="text-org2356d10">
+<div id="outline-container-orgd200e0b" class="outline-3">
+<h3 id="orgd200e0b">git克隆</h3>
+<div class="outline-text-3" id="text-orgd200e0b">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org8d249c6" class="outline-2">
-<h2 id="org8d249c6">git 和声</h2>
-<div class="outline-text-2" id="text-org8d249c6">
+<div id="outline-container-org6ce9e46" class="outline-2">
+<h2 id="org6ce9e46">git 和声</h2>
+<div class="outline-text-2" id="text-org6ce9e46">
 </div>
-<div id="outline-container-org0846f36" class="outline-3">
-<h3 id="org0846f36">git 工作协调</h3>
-<div class="outline-text-3" id="text-org0846f36">
+<div id="outline-container-org380ce6a" class="outline-3">
+<h3 id="org380ce6a">git 工作协调</h3>
+<div class="outline-text-3" id="text-org380ce6a">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-org715957e" class="outline-3">
-<h3 id="org715957e">git 冲突解决</h3>
-<div class="outline-text-3" id="text-org715957e">
+<div id="outline-container-orgd91c077" class="outline-3">
+<h3 id="orgd91c077">git 冲突解决</h3>
+<div class="outline-text-3" id="text-orgd91c077">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-orgc0bd4e4" class="outline-2">
-<h2 id="orgc0bd4e4"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-orgc0bd4e4">
+<div id="outline-container-orgeab072d" class="outline-2">
+<h2 id="orgeab072d"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-orgeab072d">
 </div>
-<div id="outline-container-orgb875d9f" class="outline-3">
-<h3 id="orgb875d9f">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-orgb875d9f">
+<div id="outline-container-orge29a358" class="outline-3">
+<h3 id="orge29a358">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-orge29a358">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
