--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-org44b64ed" class="outline-2">
-<h2 id="org44b64ed">what is spark</h2>
-<div class="outline-text-2" id="text-org44b64ed">
+<div id="outline-container-org268ae83" class="outline-2">
+<h2 id="org268ae83">what is spark</h2>
+<div class="outline-text-2" id="text-org268ae83">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org0cb2e7f" class="outline-2">
-<h2 id="org0cb2e7f">RDD</h2>
-<div class="outline-text-2" id="text-org0cb2e7f">
+<div id="outline-container-org29d1c09" class="outline-2">
+<h2 id="org29d1c09">RDD</h2>
+<div class="outline-text-2" id="text-org29d1c09">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-orge41a481" class="outline-3">
-<h3 id="orge41a481">RDD基础</h3>
-<div class="outline-text-3" id="text-orge41a481">
+<div id="outline-container-org8be9f75" class="outline-3">
+<h3 id="org8be9f75">RDD基础</h3>
+<div class="outline-text-3" id="text-org8be9f75">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-org3f35b20" class="outline-2">
-<h2 id="org3f35b20">spark use</h2>
-<div class="outline-text-2" id="text-org3f35b20">
+<div id="outline-container-org053c96d" class="outline-2">
+<h2 id="org053c96d">spark use</h2>
+<div class="outline-text-2" id="text-org053c96d">
 </div>
-<div id="outline-container-orga20897e" class="outline-3">
-<h3 id="orga20897e">spark base</h3>
-<div class="outline-text-3" id="text-orga20897e">
+<div id="outline-container-orgbf59feb" class="outline-3">
+<h3 id="orgbf59feb">spark base</h3>
+<div class="outline-text-3" id="text-orgbf59feb">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-orgb204371" class="outline-3">
-<h3 id="orgb204371">spark install</h3>
-<div class="outline-text-3" id="text-orgb204371">
+<div id="outline-container-orge6f2fe7" class="outline-3">
+<h3 id="orge6f2fe7">spark install</h3>
+<div class="outline-text-3" id="text-orge6f2fe7">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-orgdd8c0f1" class="outline-3">
-<h3 id="orgdd8c0f1">spark shell</h3>
-<div class="outline-text-3" id="text-orgdd8c0f1">
+<div id="outline-container-orgf63c896" class="outline-3">
+<h3 id="orgf63c896">spark shell</h3>
+<div class="outline-text-3" id="text-orgf63c896">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-org9a4d9f0" class="outline-3">
-<h3 id="org9a4d9f0">idea spark scala</h3>
-<div class="outline-text-3" id="text-org9a4d9f0">
+<div id="outline-container-org6e8cc15" class="outline-3">
+<h3 id="org6e8cc15">idea spark scala</h3>
+<div class="outline-text-3" id="text-org6e8cc15">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-orgeb2ab5f" class="outline-3">
-<h3 id="orgeb2ab5f">idea spark java</h3>
-<div class="outline-text-3" id="text-orgeb2ab5f">
+<div id="outline-container-org0015459" class="outline-3">
+<h3 id="org0015459">idea spark java</h3>
+<div class="outline-text-3" id="text-org0015459">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-orgb44d04f" class="outline-3">
-<h3 id="orgb44d04f">rdd &amp; dataframe</h3>
+<div id="outline-container-org498e409" class="outline-3">
+<h3 id="org498e409">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-org8a986dc" class="outline-2">
-<h2 id="org8a986dc">docker spark</h2>
-<div class="outline-text-2" id="text-org8a986dc">
+<div id="outline-container-orgb636dc7" class="outline-2">
+<h2 id="orgb636dc7">docker spark</h2>
+<div class="outline-text-2" id="text-orgb636dc7">
 </div>
-<div id="outline-container-orgf79b868" class="outline-3">
-<h3 id="orgf79b868">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-orgf79b868">
+<div id="outline-container-org4b76c10" class="outline-3">
+<h3 id="org4b76c10">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-org4b76c10">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-org0d673c3" class="outline-3">
-<h3 id="org0d673c3">docker search spark</h3>
-<div class="outline-text-3" id="text-org0d673c3">
+<div id="outline-container-org834ac34" class="outline-3">
+<h3 id="org834ac34">docker search spark</h3>
+<div class="outline-text-3" id="text-org834ac34">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org156f0cb" class="outline-2">
-<h2 id="org156f0cb">docker hbase</h2>
+<div id="outline-container-org9409973" class="outline-2">
+<h2 id="org9409973">docker hbase</h2>
 </div>
 
 </div>
